Adds dark mode to entire dashboard (#467)
* Adds New Dark Mode Assets

* Moves triangle for dropdown to a reasonable position

* Majority .eex dark implementation

* Fixes Logo Positioning

* Adds theme flag to user schema, uses it

* Uses correct variables for theme applicator script

* Minor missed theme changes/fallbacks

* Individual Component Support + Theme Context

* Sources Tab Support

This was a pain to test D:

* Partial Stats Sections Support

* More of stats modules supported

* Modal +table support

* Improves some Flatpickr in light theme, supports dark theme

* Fixes missed settings tab colors

* Finishes Devices module support

* Fixes bar graph colors

* Better colorizes maps module

* Undoes colorized bars

(they looked bad, on second thought)

* Fixes loading indicator

* Finishes conversions module

* Adds changelog entry

The PR number could be wrong, will double check

* Fixes missed header color

* Fixes naming of migration and removes static alter

* Does migration correctly

As I said, my Elixir is pretty weak heh

* Adds support for spike notifications setting

* Improves contrast and visibility for email settings

* Resolves @ukutaht's comments on #467

* Fixes missing dark style

* Found one more missed dark element (shared links)

* Formatting fixes

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -5,6 +5,7 @@
 @import "modal.css";
 @import "loader.css";
 @import "tooltip.css";
+@import "flatpickr.dark.css";
 
 .button {
   @apply bg-indigo-600 border border-transparent rounded-md py-2 px-4 inline-flex justify-center text-sm leading-5 font-medium text-white transition hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500;
@@ -156,7 +157,7 @@ blockquote {
 
 .dropdown-content::before {
     top: -16px;
-    right: 64px;
+    right: 8px;
     left: auto;
 }
 .dropdown-content::before {
@@ -174,7 +175,7 @@ blockquote {
 }
 .dropdown-content::after {
     top: -14px;
-    right: 65px;
+    right: 9px;
     left: auto;
 }
 
@@ -194,6 +195,14 @@ blockquote {
 
 .table-striped tbody tr:nth-child(odd) {
   background-color: #f1f5f8;
+}
+
+.dark .table-striped tbody tr:nth-child(odd) {
+  background-color: rgb(37, 47, 63);
+}
+
+.dark .table-striped tbody tr:nth-child(even) {
+  background-color: rgb(26, 32, 44);
 }
 
 .twitter-icon {
@@ -251,4 +260,9 @@ blockquote {
 
 .datamaps-subunit {
   cursor: pointer;
+}
+
+/* Only because the map handler doesn't expose an easier way to change the shadow color */
+.dark .hoverinfo {
+  box-shadow: 1px 1px 5px rgb(26, 32, 44);
 }
