--- a/lib/plausible_web/templates/auth/password_reset_request_success.html.eex
+++ b/lib/plausible_web/templates/auth/password_reset_request_success.html.eex
@@ -1,12 +1,12 @@
-<div class="bg-white max-w-md w-full mx-auto shadow-md rounded px-8 pt-6 pb-8 mb-4 mt-8">
-  <h2 class="text-xl font-black">Success!</h2>
-  <div class="my-4 leading-tight">
+<div class="bg-white dark:bg-gray-800 max-w-md w-full mx-auto shadow-md rounded px-8 pt-6 pb-8 mb-4 mt-8">
+  <h2 class="text-xl font-black dark:text-gray-100">Success!</h2>
+  <div class="my-4 leading-tight dark:text-gray-100">
     We have sent an email with password reset instructions to <b><%= @email %></b> if it exists in our database.
   </div>
-  <div class="mt-8 text-sm">
+  <div class="mt-8 text-sm dark:text-gray-100">
     Didn't receive an email?
   </div>
-  <div class="mt-2 text-sm text-gray-600 leading-tight">
-    Please check your spam folder and contact <a href="mailto:support@plausible.io">support@plausible.io</a> if the problem persists
+  <div class="mt-2 text-sm text-gray-600 dark:text-gray-400 leading-tight">
+    Please check your spam folder and contact <a href="mailto:support@plausible.io" class="text-indigo-500">support@plausible.io</a> if the problem persists
   </div>
 </div>
