--- a/lib/plausible_web/templates/error/error.html.eex
+++ b/lib/plausible_web/templates/error/error.html.eex
@@ -8,11 +8,13 @@
     <link rel="icon" type="image/png" sizes="32x32" href="<%= PlausibleWeb.Router.Helpers.static_path(@conn, "/images/icon/plausible_favicon.png") %>">
     <title><%= assigns[:title] || "Plausible · Web analytics" %></title>
     <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
+    <script type="text/javascript" data-pref="<%= @conn.assigns[:current_user] && @conn.assigns[:current_user].theme %>" src="<%= Routes.static_path(@conn, "/js/applyTheme.js") %>"></script>
+
   </head>
-  <body class="flex flex-col h-full bg-gray-100">
+  <body class="flex flex-col h-full bg-gray-100 dark:bg-gray-900">
     <div class="container text-center mt-24">
-      <h1 class="text-5xl font-black"><%= @status %></h1>
-      <div class="my-4 text-xl"><%= @message %></div>
+      <h1 class="text-5xl font-black dark:text-gray-100"><%= @status %></h1>
+      <div class="my-4 text-xl dark:text-gray-100"><%= @message %></div>
       <%= link("Go to the homepage", to: PlausibleWeb.LayoutView.home_dest(@conn), class: "button mt-4") %>
     </div>
   </body>
