--- a/lib/plausible_web/templates/page/index.html.eex
+++ b/lib/plausible_web/templates/page/index.html.eex
@@ -1,3 +1,3 @@
-<div class="relative bg-gray-50 overflow-hidden text-center">
+<div class="relative bg-gray-50 dark:bg-gray-800 overflow-hidden text-center dark:text-gray-100">
   You will be redirected... If it doesn't work, please click login.
 </div>
