--- a/lib/plausible_web/templates/site/new_shared_link.html.eex
+++ b/lib/plausible_web/templates/site/new_shared_link.html.eex
@@ -1,12 +1,12 @@
-<%= form_for @changeset, "/sites/#{URI.encode_www_form(@site.domain)}/shared-links", [class: "max-w-md w-full mx-auto bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 mt-8"], fn f -> %>
-  <h2 class="text-xl font-black">New shared link</h2>
-  <div class="my-4">
+<%= form_for @changeset, "/sites/#{URI.encode_www_form(@site.domain)}/shared-links", [class: "max-w-md w-full mx-auto bg-white dark:bg-gray-800 shadow-md rounded px-8 pt-6 pb-8 mb-4 mt-8"], fn f -> %>
+  <h2 class="text-xl font-black dark:text-gray-100">New shared link</h2>
+  <div class="my-4 dark:text-gray-100">
     Add a password or leave it blank so anyone with the link can see the stats.
     Once the link is created, we cannot reveal the password. Please make sure you save it in a secure place.
   </div>
   <div class="my-6">
-    <%= label f, :password, "Password (optional)", class: "block text-sm font-bold" %>
-    <%= password_input f, :password, class: "transition mt-3 bg-gray-100 appearance-none border border-transparent rounded w-full p-2 text-gray-700 leading-normal appearance-none focus:outline-none focus:bg-white focus:border-gray-300" %>
+    <%= label f, :password, "Password (optional)", class: "block text-sm font-bold dark:text-gray-100" %>
+    <%= password_input f, :password, class: "transition mt-3 bg-gray-100 dark:bg-gray-900 outline-none appearance-none border border-transparent rounded w-full p-2 text-gray-700 dark:text-gray-300 leading-normal focus:outline-none focus:bg-white dark:focus:bg-gray-800 focus:border-gray-300 dark:focus:border-gray-500" %>
     <%= error_tag f, :password %>
   </div>
 
